{
    "name": "UserControls",
    "maps": [
        {
            "name": "SetUp",
            "id": "cac837e9-c5cd-430e-9203-e244e755f88b",
            "actions": [
                {
                    "name": "RecentreView",
                    "type": "Button",
                    "id": "178b7187-8d1a-41fe-8552-64139b138ee5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveForward",
                    "type": "Button",
                    "id": "31fdbde9-2b4a-4f67-b221-4d70567dc07c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveBack",
                    "type": "Button",
                    "id": "badda646-810f-4779-a273-ec070a6c9d21",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "1d9e55d7-91cf-49eb-ba71-28d534ef79c9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "d12bdd55-0a92-4c14-aacf-3159a085f900",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveUp",
                    "type": "Button",
                    "id": "46b4b65f-9db8-4253-bb6a-6e2eaab258ec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveDown",
                    "type": "Button",
                    "id": "8bce6581-9b44-4ae4-b3e4-a8e56e76e775",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b6aad7aa-3bce-46ac-bc4b-4ebfe926c81e",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RecentreView",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "70633872-01d2-4c2b-b560-456377673d78",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dbb25947-f198-492a-80c5-59f1b2a364f5",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveBack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "30316db1-23e8-4e79-9852-b837529f119d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "923cdd6c-16d3-40fd-beff-c4605f67fff3",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "14ff8cf5-8442-4bb2-9fb2-5be754cecafb",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "101c7684-dfd2-4c77-a396-e8ff7754158c",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "af50fe62-df43-4984-bf17-b963659b0a8b",
            "actions": [
                {
                    "name": "UI Button Click",
                    "type": "Button",
                    "id": "8a1196e9-d5a7-4280-a378-b82c2f3c37b3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f1eb7197-4ce7-4e8b-9beb-696be77c1912",
                    "path": "<ViveWand>/triggerPressed",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "UI Button Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Debug",
            "id": "9cc28a41-3fd2-4fb9-b3c5-637d80d652b9",
            "actions": [
                {
                    "name": "PlayNextVideoSequence",
                    "type": "Button",
                    "id": "9295fbbf-f28c-4baf-9621-3d8218a2e927",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TriggerPath",
                    "type": "Button",
                    "id": "0784f02e-f0c9-4d86-8738-1697a7131be1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "190dd12b-d96f-45ea-bc3b-244790a1d067",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayNextVideoSequence",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ab9e22b7-cf28-4edb-a949-9461cf6b9d02",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerPath",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}